--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=jimsblog
-DB_USERNAME=root
-DB_PASSWORD=
+DB_HOST=db-mysql-blr1-79614-do-user-13989751-0.b.db.ondigitalocean.com
+DB_PORT=25060
+DB_DATABASE=defaultdb
+DB_USERNAME=doadmin
+DB_PASSWORD=AVNS_PLFQ8Jgz-Rwib7BzaO6
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
