--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:8Be3GMc5AnL3X0y/sgI1sHTObbZCUTZybses4iF288o=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://jimsindiablog.me
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
