--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,62 @@
-node_modules
+# Laravel
+/vendor
+/node_modules
+/public/storage
+/storage/*
+/storage/*.key
+/public/hot
+/bootstrap/cache
+/public/hot
+/public/storage
+/storage/*.key
+/.env
+/.env.local
+/.env.backup
+Homestead.json
+Homestead.yaml
+/.vagrant
+/.idea
+/.vscode
+/.phpunit.result.cache
+/.sass-cache
+/.DS_Store
+Thumbs.db
+/public/storage
+/storage/framework/cache/data
+/storage/framework/sessions
+/storage/framework/testing
+/storage/framework/views
+/bootstrap/cache
+
+# Composer
+composer.phar
+
+# npm
+package-lock.json
+npm-debug.log
+
+# OS files
+Thumbs.db
+Icon
+
+# Build files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.*.swp
+
+# Logs
+*.log
+
+# Laravel Mix
+mix-manifest.json
+
+# IDE
+.idea
+.vscode
+
+# Optional: Lockfile
+# Keep composer.lock committed for app reproducibility
+
+# Ignore generated coverage files
+coverage/
