--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^8.0.0",
+        "php": "^8.1",
         "intervention/image": "^2.4",
-        "laravel/framework": "10.9.0",
+        "laravel/framework": "^10.48.29",
         "laravel/helpers": "*",
         "laravel/tinker": "^2.8.1",
         "laravel/ui": "^4.2",
