--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "yajra/laravel-datatables-oracle": "^10.4.0"
     },
     "require-dev": {
+        "fakerphp/faker": "^1.24",
         "filp/whoops": "~2.0",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "^10.1",
