--- a/composer.json
+++ b/composer.json
@@ -5,20 +5,20 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^8.1",
-        "intervention/image": "^2.4",
-        "laravel/framework": "^10.48.29",
+        "php": "^8.2",
+        "intervention/image": "^3.0",
+        "laravel/framework": "^12.0",
         "laravel/helpers": "*",
-        "laravel/tinker": "^2.8.1",
-        "laravel/ui": "^4.2",
+        "laravel/tinker": "^2.10",
+        "laravel/ui": "^4.5",
         "mews/purifier": "^3.4.0",
-        "yajra/laravel-datatables-oracle": "^10.4.0"
+        "yajra/laravel-datatables-oracle": "^12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.24",
-        "filp/whoops": "~2.0",
-        "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "^10.1",
+        "filp/whoops": "^2.15",
+        "mockery/mockery": "^1.6",
+        "phpunit/phpunit": "^11.0",
         "symfony/thanks": "^1.2.10"
     },
     "autoload": {
