--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "jquery": "^3.2",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "sass": "^1.56.0",
+        "sass-loader": "^12.1.0",
+        "resolve-url-loader": "^5.0.0"
     }
 }
