Add vue-loader and vue-template-compiler to devDependencies in package.json

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vue": "^2.5.7",
         "sass": "^1.56.0",
         "sass-loader": "^12.1.0",
-        "resolve-url-loader": "^5.0.0"
+        "resolve-url-loader": "^5.0.0",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.7.16"
     }
 }
