--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://jimsindiablogs-1051146702851.asia-south2.run.app/
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
